--- a/_episodes_rmd/17-example-dataset.Rmd
+++ b/_episodes_rmd/17-example-dataset.Rmd
@@ -20,6 +20,7 @@ source: Rmd
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
 knitr_fig_path("1-")
+.libPaths("/home/elze/anaconda3/lib/R/library")
 ```
 
 ![Death is certain, the time is not](./../fig/GoT.png)
@@ -68,11 +69,16 @@ Once data is loaded into R, let's evaluate its quality.
 > > summary(got_dat)
 > > ```
 > >
-> > The last five columns have no entries at all and should be removed to not interfere with statistical analyses.
+> > The last six columns have no entries at all and should be removed to not interfere with statistical analyses.
 > > ```{r}
 > > ## remove columns that only contain NAs as entries
-> > got <- got_dat %>% 
-> >   select(which(colSums(is.na(.)) < nrow(got_dat)))
+> > # (1) for each column, do all rows contain NAs?
+> > nas_all <- got_dat %>% 
+> >   summarise_all(funs(all(is.na(.))))
+> > # (2) which columns contain only NAs?
+> > to_remove <- which(nas_all == TRUE)
+> > # (3) remove these columns 
+> > got <- got_dat[, -to_remove]
 > > ```
 > {: .solution}
 {: .challenge}
@@ -80,7 +86,13 @@ Once data is loaded into R, let's evaluate its quality.
 
 ```{r, echo=FALSE}
 ## remove columns that only contain NAs as entries
-got <- got_dat[ , which(!apply(got_dat, 2, function(x) all(is.na(x))))]
+# (1) for each column, do all rows contain NAs?
+nas_all <- got_dat %>% 
+  summarise_all(funs(all(is.na(.))))
+# (2) which columns contain only NAs?
+to_remove <- which(nas_all == TRUE)
+# (3) remove these columns 
+got <- got_dat[, -to_remove]
 ```
 
 ## Graphical data exploration
@@ -155,23 +167,42 @@ This is not a very informative graph, because all categorical variables are enco
 > ## Challenge 4
 >
 > How can you find the values for each of the encoded categorical variable?
->
+> Tip - use `tidyr::pivot_longer` function to list all variables for each character in a separate row, then iterate over them using `dplyr::rowwise` and finally, apply `tidyr::pivot_wider` function to collect all observations for each character into a single row again.
+> 
 > > ## Solution to Challenge 4
 > >
 > > ```{r}
-> > ## What are the categorial variables?
+> > ## (1) What are the unique categorial variables?
 > > cols_cat <- unique(meta$variable)
-> > got_cat <- got %>% 
-> >   select(cols_cat, id, name) %>% 
-> >   tidyr::gather(key = cat_variable, value = cat_code, -id, -name) %>% 
+> > 
+> > ## (2) Use tidyr::pivot_longer to pivot data to long format:
+> > # for each character, extract all of the categorical variables into a separate row
+> > got_cat_long <- got %>%
+> >   # use all_of() to force the selection of the column names listed in the variable cols_cat
+> >     select(all_of(cols_cat), id, name) %>% 
+> >     tidyr::pivot_longer(-c(id, name),
+> >       names_to = "cat_variable",
+> >       values_to = "cat_code")
+> > 
+> > ## (3) Extract variables' values from meta data.frame
+> > got_cat_long <- got_cat_long %>%
+> >   # for each character and variable combination
 > >   rowwise() %>% 
-> >   mutate(variable_value = ifelse(is.na(cat_code), NA,
+> >   mutate(variable_value = ifelse(
+> >     # if character and variable combination is not NA
+> >     is.na(cat_code), NA,
+> >     # extract the variable's value from the meta data.frame
 > >     meta %>% 
 > >       filter(variable == cat_variable, code == cat_code) %>%
-> >       select(value) %>% 
+> >       select(value) %>%
 > >       pull())) %>% 
-> >   select(-cat_code) %>% 
-> >   tidyr::spread(key = cat_variable, value = variable_value) %>% 
+> >     select(-cat_code) 
+> >   
+> > ## (4) Use tidyr::pivot_wider to pivot data back to wide format:
+> > got_cat <- got_cat_long %>% 
+> >   tidyr::pivot_wider(names_from = cat_variable,
+> >                      values_from = variable_value) %>% 
+> >   # remove grouping by rows
 > >   ungroup()
 > > ```
 > >
@@ -190,20 +221,38 @@ This is not a very informative graph, because all categorical variables are enco
 {: .challenge}
 
 ```{r, echo=FALSE}
-## What are the categorial variables?
+## (1) What are the unique categorial variables?
 cols_cat <- unique(meta$variable)
-## iterate over the categorial variables
-got_cat <- lapply(cols_cat, function(col) {
-  ## extract the numerical categories for the variable
-  got_col <- got[ , col]
-  ## find the corresponding entries in the metadata encoding table 
-  meta_col <- meta[meta$variable == col, ]
-  meta_col$value[match(got_col, meta_col$code)]
-  })
-got_cat <- setNames(
-  ## cbind the list of extracted values
-  as.data.frame(do.call(cbind, got_cat)),
-  nm = c(cols_cat))
+
+## (2) Use tidyr::pivot_longer to pivot data to long format:
+# for each character, extract all of the categorical variables into a separate row
+got_cat_long <- got %>% 
+  # use all_of() to force the selection of the column names listed in the variable cols_cat
+    select(all_of(cols_cat), id, name) %>% 
+    tidyr::pivot_longer(-c(id, name),
+      names_to = "cat_variable",
+      values_to = "cat_code")
+
+## (3) Extract variables' values from meta data.frame
+got_cat_long <- got_cat_long %>%
+  # for each character and variable combination
+  rowwise() %>% 
+  mutate(variable_value = ifelse(
+    # if character and variable combination is not NA
+    is.na(cat_code), NA,
+    # extract the variable's value from the meta data.frame
+    meta %>% 
+      filter(variable == cat_variable, code == cat_code) %>%
+      select(value) %>%
+      pull())) %>% 
+    select(-cat_code) 
+  
+## (4) Use tidyr::pivot_wider to pivot data back to wide format:
+got_cat <- got_cat_long %>% 
+  tidyr::pivot_wider(names_from = cat_variable,
+                     values_from = variable_value) %>% 
+  # remove grouping by rows
+  ungroup()
 ```
 
 Let's explore this dataset more by looking into how frequently new characters were introduced into the show. Which `got` data.frame column store this information?
@@ -465,7 +514,7 @@ ggforest(cox_fit, data = got_cat)
 > >
 > > * Male, rather than female (but not statistically significant)
 > > * Lowborn, rather than highborn
-> > * Those who did not switch allegiance (loyalty wins?)
+> > * Those who did not switch allegiance (disloyalty pays off?)
 > > * Characters who only featured moderately prominently (protection by the importance of the role?)
 > > 
 > {: .solution}
